fixed broken url

--- a/digital-marketing/emailmarketing.html
+++ b/digital-marketing/emailmarketing.html
@@ -89,8 +89,8 @@
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
           <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
           </li>
-          <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
-          <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
+          <li><a class="dropdown-item" href="social-media-management-nz.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="website-marketing-christchurch.html">Website Marketing</a>
           </li>
           <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
         </ul>
@@ -129,7 +129,7 @@
       </div>
       <div class="col ">
         <p class=" mb-1 bio">Email marketing leverages the contact details of your existing customers, or prospects that have signed up on your
-        <a href="../web-development/web-design-christchurch-christchurch.html">website</a> or <a href="../web-development/landing-pages.html">landing page</a>, to promote your products or services. It is often used to build a community around your brand.
+        <a href="../web-development/web-design-christchurch.html">website</a> or <a href="../web-development/landing-pages.html">landing page</a>, to promote your products or services. It is often used to build a community around your brand.
          This part of your customer journey and allows you to stay front of mind with your customers via email without being overly
         intrusive. As a marketing agency, we can help you define the appropriate frequency of emails and content to share. Our
         goal is to bring your prospect back to your website to place an order or get in touch with you to purchase your
@@ -168,17 +168,17 @@
             src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing
           Strategy</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/smmanagement.html"><img
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/social-media-management-nz.html"><img
             src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/smmanagement.html">Social Media Management</a>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/social-media-management-nz.html">Social Media Management</a>
       </div>
       <div class="w-100 d-md-none"></div>
       <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/emailmarketing.html"><img
             src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/emailmarketing.html">Email Marketing</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/websitemarketing.html"><img
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/website-marketing-christchurch.html"><img
             src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/websitemarketing.html">Website Marketing</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/website-marketing-christchurch.html">Website Marketing</a></div>
     </div>
   </div>
 
