--- a/digital-marketing/website-marketing-christchurch.html
+++ b/digital-marketing/website-marketing-christchurch.html
@@ -89,8 +89,8 @@
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
         </li>
-        <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
+        <li><a class="dropdown-item" href="social-media-management-nz.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="website-marketing-christchurch.html">Website Marketing</a>
         </li>
         <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
       </ul>
@@ -159,17 +159,17 @@
           src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing
         Strategy</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/smmanagement.html"><img
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/social-media-management-nz.html"><img
           src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/smmanagement.html">Social Media Management</a>
+    <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/social-media-management-nz.html">Social Media Management</a>
     </div>
     <div class="w-100 d-md-none"></div>
     <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/emailmarketing.html"><img
           src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
     <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/emailmarketing.html">Email Marketing</a></div>
-    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/websitemarketing.html"><img
+    <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/website-marketing-christchurch.html"><img
           src="../images/DMicon.png" alt="Creative services pencil icon" class="service-icon" /></a></div>
-    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/websitemarketing.html">Website Marketing</a></div>
+    <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/website-marketing-christchurch.html">Website Marketing</a></div>
   </div>
 </div>
 
