--- a/digital-marketing/digitalstrategy.html
+++ b/digital-marketing/digitalstrategy.html
@@ -89,8 +89,8 @@
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" href="digitalstrategy.html">Digital Marketing Strategy</a>
         </li>
-        <li><a class="dropdown-item" href="smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="websitemarketing.html">Website Marketing</a>
+        <li><a class="dropdown-item" href="social-media-management-nz.html">Social Media Management</a></li>
+        <li><a class="dropdown-item" href="website-marketing-christchurch.html">Website Marketing</a>
         </li>
         <li><a class="dropdown-item" href="emailmarketing.html">Email Marketing</a></li>
       </ul>
@@ -143,7 +143,7 @@
           <li class="bio-list">◼ Digital marketing assessment</li>
           <li class="bio-list">◼ <a href="../creative-services/brandstrategy.html">Buyer persona creation</a></li>
           <li class="bio-list">◼ <a href="../web-development/seo-services-christchurch.html">Search Engine Optimisation (SEO)</a></li>
-          <li class="bio-list">◼ <a href="smmanagement.html">Social Media Marketing (SMM)</a></li>
+          <li class="bio-list">◼ <a href="social-media-management-nz.html">Social Media Marketing (SMM)</a></li>
           <li class="bio-list">◼ Build up your emails list</li>
           <li class="bio-list">◼ Lead magnet creation</li>
           <li class="bio-list">◼ <a href="../creative-services/brandstrategy.html">Create your customer journey</a></li>
@@ -165,16 +165,16 @@
       <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/digitalstrategy.html"><img src="../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/digitalstrategy.html">Digital Marketing Strategy</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/smmanagement.html"><img src="../images/DMicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/social-media-management-nz.html"><img src="../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/smmanagement.html">Social Media Management</a></div>
+      <div class="col-lg-2 col-md-2 col-4"> <a href="/digital-marketing/social-media-management-nz.html">Social Media Management</a></div>
         <div class="w-100 d-md-none"></div>
       <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/emailmarketing.html"><img src="../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
       <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/emailmarketing.html">Email Marketing</a></div>
-      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/websitemarketing.html"><img src="../images/DMicon.png"
+      <div class="col-lg-1 col-md-1 col-2"><a href="/digital-marketing/website-marketing-christchurch.html"><img src="../images/DMicon.png"
             alt="Creative services pencil icon" class="service-icon" /></a></div>
-      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/websitemarketing.html">Website Marketing</a></div>
+      <div class="col-lg-2 col-md-2 col-4"><a href="/digital-marketing/website-marketing-christchurch.html">Website Marketing</a></div>
     </div>
   </div>
 
